         man/fuse.1,memory.c,menu.[ch],menu_data.dat,periph.[ch],
         roms/Makefile.am,roms/opus.rom,settings.dat,tape.c,ui.c,ui/options.dat,
         ui/sdl/sdldisplay.c,ui/ui.h,utils.c,z80/coretest.c,z80/z80_checks.h,
         z80/z80_ops.c: add Opus Discovery support (patch #2823760) (Gergely
         Szasz and Fredrick Meunier).
20090731 disk/disk.c: tweak sector padding to fix ATC+Techonicn Ted.dsk Opus
         disk (thanks, Simon Owen) (Gergely Szasz).
20090803 man/fuse.1: tweak some details in the Opus and +D sections (Fred).
20090813 compat/wii/paths.c: Wii: Modified compat_is_absolute_path function to
	 recognize 'sd:/' prefix (Marek).
20090830 settings-header.pl,settings.pl: Minor correction to the perl code that
	 was creating duplicate 'Copyright (c)' string in generated c files.
	 (Marek).
20090830 fuse.c,ui/wii/wiidisplay.c: Wii: Moved filesystem init to main() where
	 it belongs (Marek).
20090830 utils.c,fuse.c,compat.h,disk/disk.c,input.c,README,settings.pl
	 ui/widget/{menu.c,filesel.c}: Wii: Use GEKKO macro instead of UI_WII
	 for non-UI code that needs to be compiled when compiling for Wii. This
	 will allow to compile Fuse for Wii either native or SDL UI (Marek).
20090830 Makefile.am,ui/win32/{options-resource.pl,confirm.c,options.pl}: Win32:
	 Fixes to compile fuse for win32 again (patch #2801706) (Gergely Szasz).
20090830 README: Win32: Added some instructions to README about cross-compiling
	 fuse with MinGW (patch #2801706) (Gergely Szasz).
20090831 menu.c,configure.in,menu_data.dat,settings.pl: Added ability to
	 read/write the config file in ini format in case libxml2 is not
	 present (patch #2801706) (Marek).
20090831 compat/unix/file.c: Added 'b' to mode argument of fopen in
	 compat_file_open - this is ignored for POSIX systems, but for others,
	 like Win32, it is neccessary (Marek).
20090831 Makefile.am: Win32: Fixed building the main resource file and made
	 sure it is rebuilt if any of the included resource files are rebuilt