@@ -2026,6 +2026,13 @@ Select the graphics filter currently in use. See the
 section for more details.
 .RE
 .PP
+.I F11
+.br
+.I "Options, Full Screen"
+.RS
+Switch Fuse between full screen and windowed mode.
+This menu is only available under the SDL UI.
+.PP
 .I "Options, Save"
 .RS
 If
