@@ -3180,7 +3180,7 @@
          ui/sdl/sdldisplay.c,ui/ui.h,utils.c,z80/coretest.c,z80/z80_checks.h,
          z80/z80_ops.c: add Opus Discovery support (patch #2823760) (Gergely
          Szasz and Fredrick Meunier).
-20090731 disk/disk.c: tweak sector padding to fix ATC+Techonicn Ted.dsk Opus
+20090731 disk/disk.c: tweak sector padding to fix ATC+Technician Ted.dsk Opus
          disk (thanks, Simon Owen) (Gergely Szasz).
 20090803 man/fuse.1: tweak some details in the Opus and +D sections (Fred).
 20090813 compat/wii/paths.c: Wii: Modified compat_is_absolute_path function to
@@ -3239,8 +3239,11 @@
          #2875612) (Gergely Szasz).
 20091019 disk/disk.c: correct mapping of sector length to SECLEN_* macros
          (patch #2875613) (Gergely Szasz).
-20091019 disk/{beta.[ch],opus.c,plusd.c},ide/{divide.c,zxatasp.c,zxcf.c},if1.c,
+20091022 disk/{beta.[ch],opus.c,plusd.c},ide/{divide.c,zxatasp.c,zxcf.c},if1.c,
          if2.c,machines/{pentagon.c,pentagon1024.c,pentagon512.c,scorpion.c},
          memory.[ch]: make each peripheral/machine that uses memory paged in via
          /ROMCS have its own copy of the relevant struct (part of patch
          #2880415) (Gergely Szasz).
+20091113 man/fuse.1,menu.[ch],menu_data.dat: add a menu item with a hot key to
+         allow full screen and windowed mode switching for SDL (feature
+         request #1515888) (György Szombathelyi).
